# derse

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
derse/: Cargo.toml
derse-derive/: Cargo.toml
derse-derive/src/: lib.rs
derse/src/: bytes_array.rs  deserializer.rs  downward_bytes.rs  error.rs  lib.rs  serialization.rs  serializer.rs  varint64.rs
derse/src/impl/: collections.rs  duration.rs  mod.rs  phantom_data.rs  result.rs  socket_addr.rs  tinyvec.rs
derse/src/impls/: array.rs  collections.rs  compact_str.rs  cow.rs  cstr.rs  duration.rs  mod.rs  osstr.rs  pathbuf.rs  primitive.rs  string.rs  tuple.rs
derse/tests/: test_derive.rs
