[package]
name = "derse"
version = "0.1.27"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
derse-derive = { version = ">=0.1.14", path = "../derse-derive" }
thiserror = "1"
