[package]
name = "derse"
version = "0.1.28"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
full = ["compact_str"]

[dependencies]
derse-derive = { version = ">=0.1.14", path = "../derse-derive" }

compact_str = { version = "0", optional = true }
thiserror = "1"
